# BallGame

./: .clang-format  .gitignore  README.md  meson.build  meson_options.txt
include/: meson.build
src/: main.cpp  meson.build  space.cpp  space.hpp
subprojects/: .gitignore  lak.wrap
