# testing options

option('lak_enable_tests',
	type: 'boolean',
	value: true,
	yield: false,
)

# windowing options

option('lak_enable_windowing',
	type: 'boolean',
	value: true,
	yield: false,
)

option('lak_use_native_file_dialog',
	type: 'boolean',
	value: true,
	yield: false,
)

option('lak_run_windowing_tests',
	type: 'boolean',
	value: false,
	yield: false,
)

option('sdl2_from_source',
	type: 'boolean',
	value: true,
	yield: false,
)

option('lak_backend',
	type: 'combo',
	choices: [
		'win32',
		'xlib',
		'xcb',
		'sdl',
		'qt',
	],
	value: 'sdl',
	yield: false,
)

option('lak_enable_softrender',
	type: 'boolean',
	value: true,
	yield: false,
)

option('lak_enable_opengl',
	type: 'boolean',
	value: true,
	yield: false,
)

option('lak_enable_vulkan',
	type: 'boolean',
	value: false,
	yield: false,
)

option('lak_enable_metal',
	type: 'boolean',
	value: false,
	yield: false,
)

# llvm options

option('lak_enable_llvm',
	type: 'boolean',
	value: false,
	yield: false,
)

# lmdb options

option('lak_enable_lmdb',
	type: 'boolean',
	value: false,
	yield: false,
)

# lua options

option('lak_enable_lua',
	type: 'boolean',
	value: false,
	yield: false,
)

# glm options

option('lak_enable_glm',
	type: 'boolean',
	value: true,
	yield: false,
)

# dear imgui options

option('lak_enable_imgui',
	type: 'boolean',
	value: true,
	yield: false,
)

# libfive options

option('lak_enable_libfive',
	type: 'boolean',
	value: false,
	yield: false,
)

# libgphoto2 options

option('lak_enable_libgphoto2',
	type: 'boolean',
	value: false,
	yield: false,
)

# stb options

option('lak_enable_stb',
	type: 'boolean',
	value: true,
	yield: false,
)

option('lak_enable_stb_image',
	type: 'boolean',
	value: true,
	yield: false,
)

option('lak_enable_stb_image_write',
	type: 'boolean',
	value: false,
	yield: false,
)

# godot-cpp options

option('lak_enable_godot_cpp',
	type: 'boolean',
	value: false,
	yield: false,
)
